--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,10 @@ dependencies {
     implementation "io.reactivex.rxjava3:rxjava:3.0.13"
     implementation "io.reactivex.rxjava3:rxandroid:3.0.0"
 
+    //WorkManager
+    implementation "androidx.work:work-runtime:2.6.0"
+    implementation "androidx.work:work-rxjava2:2.6.0"
+
 
 }
 apply plugin: 'com.android.application'
