--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.locationtask6"
-        minSdkVersion 24
+        minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -72,6 +72,8 @@ dependencies {
     //WorkManager
     implementation "androidx.work:work-runtime:2.6.0"
     implementation "androidx.work:work-rxjava2:2.6.0"
+
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
 
 }
