--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
+
 
     <application
         android:allowBackup="true"
@@ -21,6 +24,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LocationTask6">
+
+
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -37,21 +42,14 @@
             </intent-filter>
 
         </activity>
+
+
         <service
-            android:name=".model.BackGroundService"
+            android:name=".model.LocationUpdatesService"
             android:enabled="true"
-            android:exported="false"
-            />
-
-
-        <receiver android:name=".model.LocationUpdatesBroadcastReceiver"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.LOCATION_READY" />
-            </intent-filter>
-
-        </receiver>
+            android:exported="true"
+            android:stopWithTask="true"
+            android:foregroundServiceType="location" />
 
     </application>
 </manifest>
