--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.LocationTask6">
+        android:theme="@style/Theme.LocationTask6"
+        android:name=".view.App">
 
 
 
@@ -43,13 +44,11 @@
 
         </activity>
 
-
         <service
-            android:name=".model.LocationUpdatesService"
-            android:enabled="true"
-            android:exported="true"
-            android:stopWithTask="true"
-            android:foregroundServiceType="location" />
+            android:name="androidx.work.impl.foreground.SystemForegroundService"
+            android:foregroundServiceType="location"
+            tools:node="merge" />
+
 
     </application>
 </manifest>
