--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'com.google.firebase:firebase-database:20.0.2'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -93,6 +94,20 @@ dependencies {
     implementation "androidx.work:work-rxjava2:2.6.0"
 
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+
+    //test
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.powermock:powermock:1.6.5'
+    testImplementation 'org.powermock:powermock-module-junit4:1.6.5'
+    testImplementation 'org.powermock:powermock-api-mockito:1.6.5'
+    implementation 'com.firebase:firebase-client-android:2.5.0'
+
+
+    androidTestImplementation 'org.mockito:mockito-core:1.10.19'
+
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+
+
 
 
 }
